break: create GPU
