# coordinator/models/apimod/model_vm_req_gpu.go
@@ -1,0 +1,17 @@
+/*
+ * OpenHPC
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package apimod
+
+type VmReqGpu struct {
+
+	All bool `json:"all"`
+
+	Ids []int32 `json:"ids"`
+}
